fixed footer gap

--- a/app/assets/stylesheets/challenges.scss
+++ b/app/assets/stylesheets/challenges.scss
@@ -55,6 +55,10 @@
 	color: black;
 }
 
+.documentation {
+	font-family: monospace;
+}
+
 #ccresult {
 	background-color: lightgreen;
 }
